[package]
name = "kcard"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.26"
anyhow = "1.0"
bincode = "1.3.3"
chrono = "0.4.38"
image = "0.25.1"
imageproc = "0.25.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.9.0" }
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
